# algorithm

./: 1.md  1.py  demo.cpp  新建画布1.sai2  随记.md
AcWing/practice/: 846树的重心.cpp
algorithm-board-master/: .gitignore
algorithm-board-master/图/: 拓扑排序.cpp
algorithm-board-master/数据结构/: 二维单调队列.cpp  双向链表.cpp
algorithm-board-master/杂项/: bitset优化01背包.cpp  三分求凹(凸)函数极值.cpp  三维前缀和.cpp
algorithm-board-master/树/: dfs序.cpp
algorithm-board-master/计算几何/: 三维几何.cpp  三维凸包.cpp  二维几何.cpp  平面最近点对.cpp
csp/202309/: 1.cpp  2.cpp
csp/202312/: 1.cpp  2.cpp
csp/202406/: 1.cpp  2.cpp  3.cpp  4.cpp
csp/202409/: 2.cpp
csp/202503/: 1.cpp  2.cpp
hw机试/: 1.cpp  2.cpp
lan_qiao/: CMakeLists.txt
lan_qiao/GCD和LCM/: gcd和lcm.cpp  等差数列.cpp
lan_qiao/dfs/: dfs与排列.cpp  dfs模板.cpp
lan_qiao/二叉树/: 二叉树的存储.cpp  二叉树的遍历.cpp
lan_qiao/前缀和与差分/: 前缀和_可获得的最小取值.cpp  前缀和_异或运算.cpp  前缀和_求和.cpp  差分模板.cpp
lan_qiao/快速幂/: 快速幂.cpp  模运算.cpp  越狱.cpp
lan_qiao/素数/: 素数判定.cpp  素数筛.cpp  素数筛_LR.cpp  质因数分解.cpp  选数.cpp
pat刷题/滑动窗口算法/: 最大连续1的个数.cpp  (+2 more)
文档/: AcWing算法基础课.md  note.md
洛谷刷题/: A-B数对.cpp  P1002 [NOIP2002 普及组] 过河卒.cpp  P1003 [NOIP2011 提高组] 铺地毯.cpp  P1008 [NOIP1998 普及组] 三连击.cpp  P1028 [NOIP2001 普及组] 数的计算.cpp  P1029 [NOIP2001 普及组] 最大公约数和最小公倍数问题.cpp  P1031 [NOIP2002 提高组] 均分纸牌.cpp  P1036 [NOIP2002 普及组] 选数.cpp  P1060 [NOIP2006 普及组] 开心的金明.cpp  P1094 [NOIP2007 普及组] 纪念品分组.cpp  P1097 [NOIP2007 提高组] 统计数字.cpp  P1105 平台.cpp  P1115 最大子段和.cpp
算法设计与分析/: 5种算法总结.docx  content_1731148198379.docx  demo.cpp  test.txt  ~$期末.docx  期末.docx  概念总结.docx  湖南大学算法分析与设计期末总复习上（分治、动态规划，贪心部分）.html  算法分析与设计期末总复习下（回溯，分支限界法部分）.html
(+400 files in other folders)
